# ToDoList

./: CMakeLists.txt
include/: Config.hpp  Serializer.hpp  Task.hpp  TaskManager.hpp
src/: Config.cpp  Task.cpp  TaskManager.cpp  main.cpp
tests/: CMakeLists.txt  test_task.cpp
